1999-07-06  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/menus.c (DEFAULT_ITEM_FORMAT): fixed side picture

1999-07-04  Dominik Vogt  <dominik_vogt@gmx.de>

	* configure.in: changed version to 2.3.6

	* fvwm/functions.c (execute_complex_function): -Wall fix

	* fvwm/misc.c (Destroy):
	(StashEventTime): Removed FocusOnNextTimeStamp (no longer used)

	* fvwm/misc.c (Destroy):
	* fvwm/events.c (HandleUnmapNotify): fixed focus setting

	* fvwm/gnome.c (GNOME_GetStyle): Fixed desk handling in GNOME apps.

1999-07-03  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/misc.h:
	* fvwm/events.c (HandleUnmapNotify):
	* fvwm/misc.c (Destroy):
	(HandleHardFocus): removed HandleHardFocus function; calls replaced by
	SetFocus. Fixes hang with Gnome menu bars.

1999-07-03  Mikhael Goikhman  <migo@homemail.com>

	* libs/Strings.h:
	* libs/Strings.c (CatString3):
	* fvwm/functions.h:
	* fvwm/functions.c (FindFunction, NewFvwmFunction):
	Fixed char * to be const char *, there are more places to do the same.

	* fvwm/fvwm.h:
	* fvwm/fvwm.c ({get|set}InitFunctionName): new functions
	* fvwm/fvwm/session.c (SessionInit): use setInitFunctionName
	* fvwm/fvwm.c (StartupStuff, Done): use getInitFunctionName
	* sample.fvwmrc/system.fvwm2rc:
	* fvwm/ConfigFvwmSetup:
	* fvwm/fvwm2.1:
	* NEWS:
	New special functions Session{Init|Restart|Exit}Function are executed
	instead of {Init|Restart|Exit}Function when running under a SM.
	Also mentioned FormFvwmRootCursor. in NEWS and fvwm/ConfigFvwmSetup.

1999-07-02  Paul D. Smith  <psmith@gnu.org>

	* configure.in: Don't look for a C++ compiler; we don't	need one
	anymore and it causes lots of configure problems.

1997-07-01  Hippo

	* {fvwm,libs}/Makefile.am: Reordered .c file for faster parallel makes.
	* libs/ModGraph.c: merged with Picture.c.
	* libs/Picture.c: Rewrote InitPictureCmap(), removed SavePictureCMap
	  Added GetColor().
	* {fvwm/modules}/* Fixes due to the above, removed lots of GetColor()s.

1999-07-01  Paul D. Smith  <psmith@gnu.org>
