@@ -1,3 +1,7 @@
+1999-07-07
+
+	* fvwm/menus.c: paint_menu(): fixed an expose bug
+
 1999-07-06  Dominik Vogt  <dominik_vogt@gmx.de>
 
 	* fvwm/menus.c (DEFAULT_ITEM_FORMAT): fixed side picture
